Latest additions regarding the creation of a workspace (object, database, filesystem, importing from the archive).